--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -26,15 +26,10 @@
 </div>
 
 <link
-  href="https://unpkg.com/maplibre-gl@5.4.0/dist/maplibre-gl.css"
+  href="{% static 'netbox_otnfaults/lib/maplibre-gl.css' %}"
   rel="stylesheet"
 />
-<link
-  href="https://cdn.jsdelivr.net/npm/maplibre-gl@5.4.0/dist/maplibre-gl.css"
-  rel="stylesheet"
-/>
-<script src="https://unpkg.com/maplibre-gl@5.4.0/dist/maplibre-gl.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/maplibre-gl@5.4.0/dist/maplibre-gl.js"></script>
+<script src="{% static 'netbox_otnfaults/lib/maplibre-gl.js' %}"></script>
 
 <link
   rel="stylesheet"
