增加故障站点、路径top5统计信息展示，详情跳转

--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -41,7 +41,8 @@
       heatmapData: {{ heatmap_data| safe }},
       markerData: {{ marker_data| safe }},
       sitesData: {{ sites_data| safe }},
-      apiKey: "{{ apikey }}"
+      apiKey: "{{ apikey }}",
+      faultListUrl: "{% url 'plugins:netbox_otnfaults:otnfault_list' %}"
   };
 </script>
 <script src="{% static 'netbox_otnfaults/js/maplibregl_base.js' %}"></script>
