为故障分布图页面，增加一个搜索功能框，根据搜索框中输入的文字，显示匹配的站点和路径信息，结果展示参考高德地图的搜索结果，显示图标（站点或路径），站点或路径的名称，所属省份，点击可以flty to相关地点，并且弹出对应标签页

--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -57,6 +57,7 @@
 <script src="{% static 'netbox_otnfaults/js/controls/CategoryFilterControl.js' %}"></script>
 <script src="{% static 'netbox_otnfaults/js/controls/FaultStatisticsControl.js' %}"></script>
 <script src="{% static 'netbox_otnfaults/js/controls/FaultLegendControl.js' %}"></script>
+<script src="{% static 'netbox_otnfaults/js/controls/SearchControl.js' %}"></script>
 
 <!-- App (Main) -->
 <script src="{% static 'netbox_otnfaults/js/otnfault_map_app.js' %}?v=9"></script>
