--- a/netbox_otnfaults/static/netbox_otnfaults/css/otnfault_map_globe.css
+++ b/netbox_otnfaults/static/netbox_otnfaults/css/otnfault_map_globe.css
@@ -293,7 +293,7 @@
   border: 1px solid var(--bs-border-color, #dee2e6);
   border-radius: 4px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
-  padding: 0 8px;
+  padding: 0 10px 0 8px;
   width: 185px;
   transition: all 0.2s ease;
 }
@@ -317,7 +317,7 @@
   outline: none;
   background: transparent;
   font-size: 12px;
-  padding: 8px 0;
+  padding: 8px 0px 8px 0;
   color: var(--bs-body-color, #212529);
 }
 
@@ -329,13 +329,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 18px;
-  height: 18px;
+  width: 16px;
+  height: 16px;
   color: var(--bs-secondary-color, #adb5bd);
   cursor: pointer;
   border-radius: 50%;
   transition: all 0.15s;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .search-clear:hover {
@@ -408,22 +408,19 @@
 .search-result-icon {
   width: 22px;
   height: 22px;
-  border-radius: 3px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-right: 6px;
-  font-size: 12px;
+  font-size: 14px;
   flex-shrink: 0;
 }
 
 .search-result-icon.site-icon {
-  background-color: rgba(13, 110, 253, 0.1);
   color: #0d6efd;
 }
 
 .search-result-icon.path-icon {
-  background-color: rgba(25, 135, 84, 0.1);
   color: #198754;
 }
 
