修改路径为PmTiles方式

--- a/netbox_otnfaults/templates/test.html
+++ b/netbox_otnfaults/templates/test.html
@@ -42,7 +42,7 @@
                 // OtnPath 路径数据
                 'otn_paths': {
                     type: 'vector',
-                    url: 'pmtiles://http://192.168.30.177:8080/maps/data/otn_paths.pmtiles'
+                    url: 'pmtiles://http://192.168.30.177:8080/maps/otn_paths.pmtiles'
                 }
             },
             layers: [
