修改路径url硬编码

--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -52,7 +52,8 @@
       mapZoom: {{ map_zoom }},
       useLocalBasemap: {{ use_local_basemap|yesno:"true,false" }},
       localTilesUrl: "{{ local_tiles_url }}",
-      localGlyphsUrl: "{{ local_glyphs_url }}"
+      localGlyphsUrl: "{{ local_glyphs_url }}",
+      otnPathsPmtilesUrl: "{{ otn_paths_pmtiles_url }}"
   };
 </script>
 
