修改颜色定义，统一在models中定义

--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -53,7 +53,8 @@
       useLocalBasemap: {{ use_local_basemap|yesno:"true,false" }},
       localTilesUrl: "{{ local_tiles_url }}",
       localGlyphsUrl: "{{ local_glyphs_url }}",
-      otnPathsPmtilesUrl: "{{ otn_paths_pmtiles_url }}"
+      otnPathsPmtilesUrl: "{{ otn_paths_pmtiles_url }}",
+      colorsConfig: {{ colors_config| safe }}
   };
 </script>
 
