--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -31,6 +31,7 @@
 />
 <script src="{% static 'netbox_otnfaults/lib/maplibre-gl.js' %}"></script>
 <script src="{% static 'netbox_otnfaults/lib/pmtiles.js' %}"></script>
+<script src="https://unpkg.com/deck.gl@^9.0.0/dist.min.js"></script>
 
 <link
   rel="stylesheet"
@@ -78,5 +79,5 @@
 <script src="{% static 'netbox_otnfaults/js/controls/SearchControl.js' %}"></script>
 
 <!-- App (Main) -->
-<script src="{% static 'netbox_otnfaults/js/otnfault_map_app.js' %}?v=9"></script>
+<script src="{% static 'netbox_otnfaults/js/otnfault_map_app.js' %}?v=11"></script>
 {% endblock %}
