--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -32,6 +32,7 @@
 <script src="{% static 'netbox_otnfaults/lib/maplibre-gl.js' %}"></script>
 <script src="{% static 'netbox_otnfaults/lib/pmtiles.js' %}"></script>
 <script src="https://unpkg.com/deck.gl@^9.0.0/dist.min.js"></script>
+<script src="{% static 'netbox_otnfaults/lib/maplibre-gl-measures.js' %}"></script>
 
 <link
   rel="stylesheet"
