deck本地化，修正一些高亮问题

--- a/netbox_otnfaults/templates/netbox_otnfaults/location_map.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/location_map.html
@@ -30,10 +30,11 @@
 />
 <script src="{% static 'netbox_otnfaults/lib/maplibre-gl.js' %}"></script>
 <script src="{% static 'netbox_otnfaults/lib/pmtiles.js' %}"></script>
-<script src="https://unpkg.com/deck.gl@^9.0.0/dist.min.js"></script>
+<script src="{% static 'netbox_otnfaults/lib/deck-gl.min.js' %}"></script>
 <script src="{% static 'netbox_otnfaults/lib/maplibre-gl-measures.js' %}"></script>
 
 <link
+  rel="stylesheet"
   href="{% static 'netbox_otnfaults/css/otnfault_map_globe.css' %}"
 />
 <link
