--- a/netbox_otnfaults/templates/netbox_otnfaults/otnpathgroup.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnpathgroup.html
@@ -14,6 +14,15 @@
 </style>
 {% endblock %}
 
+{% block extra_controls %}
+{% if object.paths.exists %}
+<a href="{% url 'plugins:netbox_otnfaults:location_map' %}?path_group_id={{ object.pk }}"
+   target="_blank" class="btn btn-primary btn-sm">
+  <i class="mdi mdi-map-marker"></i> 查看地图
+</a>
+{% endif %}
+{% endblock %}
+
 {% block content %}
 <div class="row mb-3">
   <div class="col col-md-6">
